src/test/deca/context/invalid/classes/field_decl_void.deca
// Description :
//    Déclaration d'un champ de type void.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Un champ ne peut pas être de type void

class A {
    void x;
}

{
}

